# LM-trainer

./: .gitignore  CMakeLists.txt  README.md  lm-trainer.cmake
src/: CMakeLists.txt  fann_cpp_test.cpp  fann_cpp_test.hpp
src/ann_wrappers/: AnnWrapper.h  AnnWrapper.hpp  CustomAnnWrapper.cpp  CustomAnnWrapper.h  FannAnnWrapper.cpp  FannAnnWrapper.h  FannAnnWrapper.hpp
src/data_wrappers/: DataWrapper.h  FannDataWrapper.cpp  FannDataWrapper.h
src/matrix_wrappers/: EigenBackend.cpp  EigenBackend.h  MatrixBackend.h  Mtx.h  Mtx.hpp
src/testers/: FannTester.cpp  FannTester.h
src/trainer/: LMTrainer.cpp  LMTrainer.h
train_data/: 24f_3c_487e.set  36f_5c_5174e.set  5f_5c_5175e.set  four_classes.set  xor.data
train_data/to_check/: #5f_5c_5175e.src_set#  #convert_data.py#  24f_3c_487e.src_set  33f_7c_6684e.src_set  36f_5c_5174e.src_set  5f_5c_5175e.src_set  convert_set.py
train_data/to_check/converted/: 33f_7c_6684e.set  5f_5c_5175e_1.set  5f_5c_5175e_1000.set  5f_5c_5175e_3.set  5f_5c_5175e_3000.set  5f_5c_5175e_5000.set
